--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html dir="ltr" lang="es">
 <head>
-<title>¿Qué hay que hacer para cuidar la próstata?</title>
-<meta name="description" content="El 15 de septiembre se celebra el Día Europeo de la Salud Prostática con el objetivo de concienciar a la población masculina sobre las enfermedades de la próstata. ">
+<title>jfdbjdbirtbir</title>
+<meta name="description" content="kjbdfbdfbidfbibisb">
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="alternate" href="" hreflang="es-ES">
@@ -17,10 +17,10 @@
 <link href="css/cludo-search.min.css" type="text/css" rel="stylesheet"> 
 
 
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="¿Qué hay que hacer para cuidar la próstata?">
-	<meta property="og:url" content="https://www.avogel.es/blog/recomendaciones-cuidar-prostata/">
-	<meta property="og:description" content="El 15 de septiembre se celebra el Día Europeo de la Salud Prostática con el objetivo de concienciar a la población masculina sobre las enfermedades de la próstata. Aunque estas son muy frecuentes a partir de los 50 años, lo cierto es que los hombres no las tienen muy en cuenta; hasta el punto de que solo el 10% de ellos acude con periodicidad al urólogo, según diferentes estadísticas.">
+	<meta property="og:type" content="n hjjl">
+	<meta property="og:title" content="jhbibibiubiiubiubi">
+	<meta property="og:url" content="hbjhbjhbhbhbhjbhjb">
+	<meta property="og:description" content="jbfjbjskfbsbiubirtsbirtsb">
 		<meta property="og:image" content="images/que-hay-que-hacer-para-cuidar-la-prostata_1.jpg">
 
 <div class="wrapper">
@@ -42,7 +42,7 @@
 			<div class="pagetop clearfix">
 			<!-- we:include - missing id, path or name !!-->
 				<div class="breadcrumb">
-				<a title="Inicio" href="/">inicio</a> > <a title="blog" href="">blog</a> > ¿Qué hay que hacer para cuidar la próstata?			</div>
+				<a title="Inicio" href="/">inicio</a> > <a title="blog" href="">blog</a> >njffdnkjbgieurghiurhgritghritug</div>
 
 <div class="blog__leftheader">
 
